# LLMToolset

./: .cursorrules  README.md
backend/: API_README.md  Makefile  app.py  pyproject.toml  true  uwsgi.ini  uwsgi.prod.ini
backend/config/: memory.py
backend/models/: Qwen3-0.6B-MLX-4bit.json  Qwen3-0.6B-MLX-6bit.json  Qwen3-0.6B-MLX-8bit.json  Qwen3-0.6B-MLX-bf16.json  Qwen3-1.7B-Base.json  Qwen3-1.7B-FP8.json  Qwen3-1.7B-GPTQ-Int8.json  Qwen3-1.7B-MLX-4bit.json  Qwen3-1.7B-MLX-6bit.json  Qwen3-1.7B-MLX-8bit.json  Qwen3-14B-AWQ.json  Qwen3-14B-Base.json  Qwen3-14B-FP8.json  Qwen3-14B-MLX-4bit.json  Qwen3-14B-MLX-6bit.json  Qwen3-14B-MLX-8bit.json  Qwen3-14B-MLX-bf16.json  Qwen3-235B-A22B-FP8.json  Qwen3-235B-A22B-GPTQ-Int4.json  Qwen3-235B-A22B-MLX-4bit.json  Qwen3-235B-A22B-MLX-6bit.json  Qwen3-235B-A22B-MLX-8bit.json  Qwen3-235B-A22B-MLX-bf16.json  Qwen3-30B-A3B-Base.json  Qwen3-30B-A3B-Instruct-2507-FP8.json  Qwen3-30B-A3B-MLX-4bit.json  Qwen3-30B-A3B-MLX-6bit.json  Qwen3-30B-A3B-MLX-8bit.json  Qwen3-32B-AWQ.json  Qwen3-32B-MLX-4bit.json  Qwen3-32B-MLX-6bit.json  Qwen3-32B-MLX-8bit.json  Qwen3-32B-MLX-bf16.json  Qwen3-4B-Base.json  Qwen3-4B-FP8.json  Qwen3-4B-MLX-6bit.json  Qwen3-4B-MLX-8bit.json  Qwen3-4B-MLX-bf16.json  Qwen3-4B-Thinking-2507-FP8.json  Qwen3-8B-AWQ.json  (+4 more)
backend/scripts/: test_api.sh
backend/utils/: download_model_config.py  help.py  memory.py  memory_test.py
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/components/: header.tsx  llm-memory-calculator.tsx  locale-toggle-button.tsx  (+5 more)
(+25 files in other folders)
